# training_platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_user_and_profile.py  fffd8023f995_profile_timezone_nullable.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  profile.py
backend/app/core/: config.py  deps.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: user.py
backend/app/schemas/: auth.py  profile.py
backend/app/services/: auth.py  profile.py  user.py
backend/tests/: conftest.py  test_auth.py  test_profile.py  test_security.py
docs/: data-model.md  development-plan.md  profile-requirements.md  races-page.md  requirements.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DatePicker.tsx  ErrorBoundary.tsx  InfoTooltip.tsx  LanguageSwitcher.tsx  ProtectedRoute.tsx  UnitToggle.tsx
frontend/src/hooks/: useProfile.ts  useProfileForm.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.ts  ru.ts
frontend/src/lib/: api.ts  auth.ts  profileSchema.ts  units.ts
frontend/src/pages/: LoginPage.tsx  ProfilePage.tsx
frontend/src/types/: profile.ts
